# ai-operation-manager

./: .flake8  .gitignore  Makefile  README.md  aom.spec  build.ps1  build.sh  main.py  pyproject.toml
.github/workflows/: build.yml  bump-version.yml
aom/: __init__.py  __main__.py  cli.py  config.py  discovery.py  git.py  installer.py  manifest.py  models.py  registry.py  resolver.py  settings.py
aom/adapters/: __init__.py  base.py  dir_adapter.py  metadata_adapter.py  suffix_adapter.py
tests/: conftest.py  test_adapters.py  test_cli.py  test_config.py  test_discovery.py  test_git.py  test_installer.py  test_manifest.py  test_models.py  test_registry.py  test_resolver.py  test_settings.py
