[project]
name = "ai-operation-manager"
dynamic = ["version"]
description = "Zero-dependency CLI for managing versioned AI skills across projects"
requires-python = ">=3.10"
readme = "README.md"

[project.scripts]
aom = "aom.cli:main"

[build-system]
requires = ["setuptools>=64", "setuptools-scm>=8"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
version_file = "aom/_version.py"
tag_regex = "^v(?P<version>[0-9]+\\.[0-9]+\\.[0-9]+)$"

[tool.setuptools.packages.find]
include = ["aom*"]

# ---------------------------------------------------------------------------
# Optional dependencies
# ---------------------------------------------------------------------------

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "flake8>=6.0",
    "black>=23.0",
]

# ---------------------------------------------------------------------------
# pytest
# ---------------------------------------------------------------------------

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--tb=short",
    "--strict-markers",
    "--cov=aom",
    "--cov-report=term-missing",
    "--cov-report=html:htmlcov",
]

# ---------------------------------------------------------------------------
# coverage
# ---------------------------------------------------------------------------

[tool.coverage.run]
source = ["aom"]
omit = ["aom/__main__.py"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if __name__",
    "if TYPE_CHECKING",
]
show_missing = true
fail_under = 60

# ---------------------------------------------------------------------------
# black
# ---------------------------------------------------------------------------

[tool.black]
line-length = 100
target-version = ["py310"]

# ---------------------------------------------------------------------------
# flake8 (via separate config since flake8 doesn't read pyproject.toml natively)
# ---------------------------------------------------------------------------
